commitWrite をトークン無しで許可できるように
